Your commit message here

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/client/public/rentradar.png.png" />
+    <link rel="icon" type="image/png" href="/rentradar.png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rentradar</title>
+    <meta name="description" content="RentRadar - Find verified rental properties in Kenya. Connect with trusted landlords and discover your perfect home with advanced search, real-time messaging, and secure booking system." />
+    <meta name="keywords" content="rental properties Kenya, house rental Nairobi, apartment rental, property search, landlord tenant platform, verified rentals" />
+    <meta name="author" content="RentRadar Team" />
+    <meta property="og:title" content="RentRadar - Find Your Perfect Rental Home in Kenya" />
+    <meta property="og:description" content="Discover verified rental properties across Kenya. Connect with trusted landlords, book property visits, and find your ideal home with our secure platform." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://rentradar.ke" />
+    <meta property="og:image" content="/rentradar.png.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="RentRadar - Find Your Perfect Rental Home" />
+    <meta name="twitter:description" content="Discover verified rental properties across Kenya with our secure platform." />
+    <meta name="twitter:image" content="/rentradar.png.png" />
+    <title>RentRadar - Find Your Perfect Rental Home in Kenya</title>
   </head>
   <body>
     <div id="root"></div>
