--- a/client/index.html
+++ b/client/index.html
@@ -16,10 +16,30 @@
     <meta name="twitter:title" content="RentRadar - Find Your Perfect Rental Home" />
     <meta name="twitter:description" content="Discover verified rental properties across Kenya with our secure platform." />
     <meta name="twitter:image" content="/rentradar.png.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#22c55e" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="RentRadar" />
+    <link rel="apple-touch-icon" href="/rentradar.png.png" />
     <title>RentRadar - Find Your Perfect Rental Home in Kenya</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      // Register service worker
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js')
+            .then((registration) => {
+              console.log('SW registered: ', registration);
+            })
+            .catch((registrationError) => {
+              console.log('SW registration failed: ', registrationError);
+            });
+        });
+      }
+    </script>
   </body>
 </html>
